--- a/package.json
+++ b/package.json
@@ -4,56 +4,58 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-      "dev": "vite",
-      "dev:live": "vite --mode production",
-      "dev:staging": "vite --mode staging",
-      "build:live": "vite build",
-      "build:staging": "vite build --mode staging",
-      "build:dev": "vite build --mode development",
-      "preview": "vite preview",
-      "lint": "eslint .",
-      "lint:fix": "eslint --fix",
-      "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-      "fix-styles": "npx stylelint 'src/**/*.{css,less}' --fix"
+    "dev": "vite",
+    "dev:live": "vite --mode production",
+    "dev:staging": "vite --mode staging",
+    "build:live": "vite build",
+    "build:staging": "vite build --mode staging",
+    "build:dev": "vite build --mode development",
+    "preview": "vite preview",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "fix-styles": "npx stylelint 'src/**/*.{css,less}' --fix"
   },
   "dependencies": {
-      "@ant-design/icons": "^4.8.0",
-      "@reduxjs/toolkit": "^1.8.6",
-      "antd": "^4.24.0",
-      "axios": "^1.1.3",
-      "firebase": "^9.13.0",
-      "midtrans-client": "^1.3.1",
-      "moment": "^2.29.4",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "react-quill": "^2.0.0",
-      "react-redux": "^8.0.4",
-      "react-router-dom": "^6.4.0",
-      "styled-components": "^5.3.6"
+    "@ant-design/icons": "^4.8.0",
+    "@react-firebase/auth": "^0.2.10",
+    "@react-firebase/database": "^0.3.11",
+    "@reduxjs/toolkit": "^1.8.6",
+    "antd": "^4.24.0",
+    "axios": "^1.1.3",
+    "firebase": "^9.18.0",
+    "midtrans-client": "^1.3.1",
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
-      "@originjs/vite-plugin-commonjs": "^1.0.3",
-      "@types/react": "^18.0.22",
-      "@types/react-dom": "^18.0.7",
-      "@vitejs/plugin-react": "^2.2.0",
-      "eslint": "^8.26.0",
-      "eslint-config-prettier": "^8.5.0",
-      "eslint-plugin-prettier": "^4.2.1",
-      "eslint-plugin-react": "^7.31.10",
-      "less": "^4.1.3",
-      "prettier": "^2.7.1",
-      "stylelint": "^14.14.1",
-      "stylelint-config-prettier": "^9.0.3",
-      "stylelint-prettier": "^2.0.0",
-      "vite": "^3.2.0",
-      "vite-plugin-ejs": "^1.5.0"
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
+    "@types/react": "^18.0.22",
+    "@types/react-dom": "^18.0.7",
+    "@vitejs/plugin-react": "^2.2.0",
+    "eslint": "^8.26.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.10",
+    "less": "^4.1.3",
+    "prettier": "^2.7.1",
+    "stylelint": "^14.14.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-prettier": "^2.0.0",
+    "vite": "^3.2.0",
+    "vite-plugin-ejs": "^1.5.0"
   },
   "husky": {
-      "hooks": {
-          "pre-commit": "lint-staged"
-      }
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
-      "*.{js,jsx,ts,tsx}": "yarn run lint:fix"
+    "*.{js,jsx,ts,tsx}": "yarn run lint:fix"
   }
 }
