fix: redirect login for jobseeker in detail job publish

--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ VITE_FIREBASE_MEASUREMENT_ID=G-2HB2XKVP6G
 VITE_GTM_KEY=GTM-56GSDMK
 VITE_MIDTRANS_CLIENT_KEY=SB-Mid-client-N0x-gWuujT4JlA7q
 VITE_REDIRECT_URL=https://hh-landing-page-recruiter.vercel.app
+VITE_JOBSEEKER_LANDING_PAGE=https://hh-landing-page-jobseeker-git-develop-tech-humahire.vercel.app/
 
 NODE_ENV=production
 REACT_APP_BASE_URL=https://dxexzpjk8m2e.cloudfront.net
