--- a/vercel.json
+++ b/vercel.json
@@ -16,5 +16,13 @@
             ]
         }
     ],
-    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/",
+            "headers": {
+                "content-type": "application/javascript"
+            }
+        }
+    ]
 }
