fix vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -19,10 +19,7 @@
     "rewrites": [
         {
             "source": "/(.*)",
-            "destination": "/",
-            "headers": {
-                "content-type": "application/javascript"
-            }
+            "destination": "/"
         }
     ]
 }
