--- a/vercel.json
+++ b/vercel.json
@@ -18,8 +18,8 @@
     ],
     "rewrites": [
         {
-            "source": "/service-worker.js",
-            "destination": "/service-worker.js"
+            "source": "/(.*)",
+            "destination": "/"
         }
     ]
 }
