--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 VITE_APP_ENV=production
-VITE_BASE_URL_API=https://dxexzpjk8m2e.cloudfront.net
+VITE_BASE_URL_API=https://div2po1h6ba50.cloudfront.net
 VITE_EVENT_PATH=b20
 VITE_FIREBASE_API_KEY=AIzaSyBKXYoTKmo4ZlVcoUbJR95yxp10IuzlqsE
 VITE_FIREBASE_AUTH_DOMAIN=humahire-71b60.firebaseapp.com
@@ -13,4 +13,4 @@ VITE_MIDTRANS_CLIENT_KEY=SB-Mid-client-N0x-gWuujT4JlA7q
 VITE_REDIRECT_URL=https://hh-landing-page-recruiter.vercel.app
 
 NODE_ENV=production
-REACT_APP_BASE_URL=https://dxexzpjk8m2e.cloudfront.net
+REACT_APP_BASE_URL=https://div2po1h6ba50.cloudfront.net
