--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "antd": "^4.24.0",
     "axios": "^1.1.3",
     "firebase": "^9.18.0",
+    "firebase-admin": "^11.9.0",
     "midtrans-client": "^1.3.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
