--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,14 +87,12 @@ jobs:
       - name: Copy build files to Develop EC2 instance
         if: github.ref == 'refs/heads/create-workflow' #Temporary
         run: |
-          scp -i EC2_KEY.pem -r dist ${{ secrets.EC2_USERNAME_DEV }}@${{ secrets.EC2_HOST_DEV }}:/home/ubuntu/admin/recruiter/tmp/dist
-          scp -i EC2_KEY.pem package.json ${{ secrets.EC2_USERNAME_DEV }}@${{ secrets.EC2_HOST_DEV }}:/home/ubuntu/admin/recruiter/tmp/package.json
+          scp -i EC2_KEY.pem -r . ${{ secrets.EC2_USERNAME_DEV }}@${{ secrets.EC2_HOST_DEV }}:/home/ubuntu/admin/recruiter/tmp/
 
       - name: Copy build files to Production EC2 instance
         if: github.event_name == 'create' && github.event.ref_type == 'tag'
         run: |
-          scp -i EC2_KEY.pem -r dist ${{ secrets.EC2_USERNAME_DEV }}@${{ secrets.EC2_HOST_DEV }}:/home/ubuntu/admin/recruiter/tmp/dist
-          scp -i EC2_KEY.pem package.json ${{ secrets.EC2_USERNAME_DEV }}@${{ secrets.EC2_HOST_DEV }}:/home/ubuntu/admin/recruiter/tmp/package.json
+          scp -i EC2_KEY.pem -r . ${{ secrets.EC2_USERNAME_DEV }}@${{ secrets.EC2_HOST_DEV }}:/home/ubuntu/admin/recruiter/tmp/
       #^^^^^^^^^^^^^^^^^Temporary^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   DeployOnDev:
     needs: Build
@@ -111,11 +109,10 @@ jobs:
           script: |
             export PATH=/usr/local/nodejs/bin:$PATH
             cd /home/ubuntu/admin/recruiter/tmp
-            node -v
-            npm -v
+            ls -liah
             npm install
             pm2 delete admin-recruiter
-            pm2 start npm --name "admin-recuiter" -- dev:live
+            pm2 start npm --name "admin-recruiter" -- run preview
 
   DeployOnTagCreation:
     needs: Build
@@ -130,7 +127,8 @@ jobs:
           username: ${{ secrets.EC2_USERNAME_DEV }} #Temporary
           key: ${{ secrets.EC2_PRIVATE_KEY_DEV }} #Temporary
           script: |
+            export PATH=/usr/local/nodejs/bin:$PATH
             cd /home/ubuntu/admin/recruiter/tmp
             npm install
-            pm2 delete admin-recuiter
-            pm2 start npm --name "admin-recuiter" -- dev:live
+            pm2 delete admin-recruiter
+            pm2 start npm --name "admin-recruiter" -- dev:live
