--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,12 +87,12 @@ jobs:
       - name: Copy build files to Develop EC2 instance
         if: github.ref == 'refs/heads/create-workflow' #Temporary
         run: |
-          scp -i EC2_KEY.pem -r . ${{ secrets.EC2_USERNAME_DEV }}@${{ secrets.EC2_HOST_DEV }}:/home/ubuntu/admin/recruiter/tmp/
+          scp -i EC2_KEY.pem -r ./* ${{ secrets.EC2_USERNAME_DEV }}@${{ secrets.EC2_HOST_DEV }}:/home/ubuntu/admin/recruiter/tmp/
 
       - name: Copy build files to Production EC2 instance
         if: github.event_name == 'create' && github.event.ref_type == 'tag'
         run: |
-          scp -i EC2_KEY.pem -r . ${{ secrets.EC2_USERNAME_DEV }}@${{ secrets.EC2_HOST_DEV }}:/home/ubuntu/admin/recruiter/tmp/
+          scp -i EC2_KEY.pem -r ./* ${{ secrets.EC2_USERNAME_DEV }}@${{ secrets.EC2_HOST_DEV }}:/home/ubuntu/admin/recruiter/tmp/
       #^^^^^^^^^^^^^^^^^Temporary^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   DeployOnDev:
     needs: Build
