--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ VITE_FIREBASE_MEASUREMENT_ID=G-2HB2XKVP6G
 VITE_GTM_KEY=GTM-56GSDMK
 VITE_MIDTRANS_CLIENT_KEY=SB-Mid-client-N0x-gWuujT4JlA7q
 VITE_REDIRECT_URL=https://hh-landing-page-recruiter.vercel.app
-VITE_JOBSEEKER_LANDING_PAGE=https://hh-landing-page-jobseeker-git-develop-tech-humahire.vercel.app/
+VITE_JOBSEEKER_LANDING_PAGE=http://admin-recruiter-dev.humahire.com
 
 NODE_ENV=production
 REACT_APP_BASE_URL=https://div2po1h6ba50.cloudfront.net
