--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,16 +21,21 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      #      - name: Configure AWS Credentials
-      #        uses: aws-actions/configure-aws-credentials@v1
-      #        with:
-      #          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #          aws-region: ap-southeast-1
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-southeast-1
+      
+      - name: Download Dev Env File
+        if: github.ref == 'refs/heads/create-workflow'
+        run: aws s3 cp s3://github-action-pipeline/env-file/hh-non-landing-page/recruiter/develop/.env.development .env
 
-      #      - name: Download Dev Env File
-      #        if: github.ref == 'refs/heads/create-workflow'
-      #        run: aws s3 cp s3://workflow-github-action/env-file/hh-be-core/develop/.env.staging .env.staging
+      - name: Download Prod Env File
+        if: github.event_name == 'create' && github.event.ref_type == 'tag'
+        run: aws s3 cp s3://github-action-pipeline/env-file/hh-non-landing-page/recruiter/production/.env.production .env
+
 
       - name: Build Next.js
         run: npm install
@@ -51,12 +56,12 @@ jobs:
             sudo chmod 777 /home/ubuntu/admin/recruiter/tmp
 
       - name: Delete Previous Next.js on Production
-        if: github.ref == 'refs/heads/create-workflow' #Temporary
+        if: github.event_name == 'create' && github.event.ref_type == 'tag'
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.EC2_HOST_DEV }} #Temporary
-          username: ${{ secrets.EC2_USERNAME_DEV }} #Temporary
-          key: ${{ secrets.EC2_PRIVATE_KEY_DEV }} #Temporary
+          host: ${{ secrets.EC2_HOST_PROD }} 
+          username: ${{ secrets.EC2_USERNAME_PROD }} 
+          key: ${{ secrets.EC2_PRIVATE_KEY_PROD }} 
           script: |
             sudo rm -rf /home/ubuntu/admin/recruiter/tmp
             sudo mkdir /home/ubuntu/admin/recruiter/tmp
@@ -73,16 +78,22 @@ jobs:
       - name: Copy SSH Production Key to File
         if: github.event_name == 'create' && github.event.ref_type == 'tag'
         run: |
-          echo "$EC2_PRIVATE_KEY_DEV" > EC2_KEY.pem
+          echo "$EC2_PRIVATE_KEY_PROD" > EC2_KEY.pem
           chmod 600 EC2_KEY.pem
-        #^^^^^^Temporary^^^^  
         env:
-          EC2_PRIVATE_KEY_DEV: ${{ secrets.EC2_PRIVATE_KEY_DEV }} #Temporary
+          EC2_PRIVATE_KEY_PROD: ${{ secrets.EC2_PRIVATE_KEY_PROD }} 
 
-      - name: Update known_hosts
+      - name: Update known_hosts Development
+        if: github.ref == 'refs/heads/create-workflow' #Temporary
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan -H ${{ secrets.EC2_HOST_DEV }} >> ~/.ssh/known_hosts
+
+      - name: Update known_hosts Production
+        if: github.event_name == 'create' && github.event.ref_type == 'tag'
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan -H ${{ secrets.EC2_HOST_PROD }} >> ~/.ssh/known_hosts
 
       - name: Copy build files to Develop EC2 instance
         if: github.ref == 'refs/heads/create-workflow' #Temporary
@@ -93,9 +104,9 @@ jobs:
       - name: Copy build files to Production EC2 instance
         if: github.event_name == 'create' && github.event.ref_type == 'tag'
         run: |
-          scp -i EC2_KEY.pem -r dist ${{ secrets.EC2_USERNAME_DEV }}@${{ secrets.EC2_HOST_DEV }}:/home/ubuntu/admin/recruiter/tmp/dist
-          scp -i EC2_KEY.pem package.json ${{ secrets.EC2_USERNAME_DEV }}@${{ secrets.EC2_HOST_DEV }}:/home/ubuntu/admin/recruiter/tmp/package.json
-      #^^^^^^^^^^^^^^^^^Temporary^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+          scp -i EC2_KEY.pem -r dist ${{ secrets.EC2_USERNAME_PROD }}@${{ secrets.EC2_HOST_PROD }}:/home/ubuntu/admin/recruiter/tmp/dist
+          scp -i EC2_KEY.pem package.json ${{ secrets.EC2_USERNAME_PROD }}@${{ secrets.EC2_HOST_PROD }}:/home/ubuntu/admin/recruiter/tmp/package.json
+
   DeployOnDev:
     needs: Build
     if: github.ref == 'refs/heads/create-workflow'
@@ -124,9 +135,9 @@ jobs:
       - name: Install Dependencies and Run Next.js
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.EC2_HOST_DEV }} #Temporary
-          username: ${{ secrets.EC2_USERNAME_DEV }} #Temporary
-          key: ${{ secrets.EC2_PRIVATE_KEY_DEV }} #Temporary
+          host: ${{ secrets.EC2_HOST_PROD }}
+          username: ${{ secrets.EC2_USERNAME_PROD }}
+          key: ${{ secrets.EC2_PRIVATE_KEY_PROD }} 
           script: |
             export PATH=/usr/local/nodejs/bin:$PATH
             cd /home/ubuntu/admin/recruiter/tmp
