--- a/.env
+++ b/.env
@@ -14,4 +14,4 @@ VITE_REDIRECT_URL=https://hh-landing-page-recruiter.vercel.app
 VITE_JOBSEEKER_LANDING_PAGE=https://hh-landing-page-jobseeker-git-develop-tech-humahire.vercel.app/
 
 NODE_ENV=production
-REACT_APP_BASE_URL=https://div2po1h6ba50.cloudfront.net
+REACT_APP_BASE_URL=https://develop-api.humahire.com/
