--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_APP_ENV=production
-VITE_BASE_URL_API=https://div2po1h6ba50.cloudfront.net
+VITE_BASE_URL_API=https://develop-api.humahire.com
 VITE_EVENT_PATH=b20
 VITE_FIREBASE_API_KEY=AIzaSyBKXYoTKmo4ZlVcoUbJR95yxp10IuzlqsE
 VITE_FIREBASE_AUTH_DOMAIN=humahire-71b60.firebaseapp.com
