--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_APP_ENV=production
-VITE_BASE_URL_API=http://develop-api.humahire.com
+VITE_BASE_URL_API=https://develop-api.humahire.com
 VITE_EVENT_PATH=b20
 VITE_FIREBASE_API_KEY=AIzaSyBKXYoTKmo4ZlVcoUbJR95yxp10IuzlqsE
 VITE_FIREBASE_AUTH_DOMAIN=humahire-71b60.firebaseapp.com
@@ -14,4 +14,4 @@ VITE_REDIRECT_URL=https://hh-landing-page-recruiter.vercel.app
 VITE_JOBSEEKER_LANDING_PAGE=https://hh-landing-page-jobseeker-git-develop-tech-humahire.vercel.app/
 
 NODE_ENV=production
-REACT_APP_BASE_URL=http://develop-api.humahire.com
+REACT_APP_BASE_URL=https://develop-api.humahire.com
