--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:live": "vite build",
     "build:staging": "vite build --mode staging",
     "build:dev": "vite build --mode development",
-    "preview": "vite preview --host 0.0.0.0 --port 3000",
+    "preview": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
