--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -124,7 +124,7 @@ jobs:
             cd /home/ubuntu/admin/recruiter/tmp
             npm install
             pm2 delete admin-recruiter
-            pm2 start npm --name "admin-recruiter" -- dev:live
+            pm2 start npm --name "admin-recruiter" -- run serve
 
   DeployOnTagCreation:
     needs: Build
