--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,20 +1,16 @@
 name: HH-Recruiter-FE Workflow
 
 on:
-  push:
-    branches:
-      - develop
   pull_request:
     branches:
+      - main
       - develop
     types:
       - closed
-  create:
-    tags:
-      - '*'
 
 jobs:
   Build:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
@@ -29,11 +25,11 @@ jobs:
           aws-region: ap-southeast-1
       
       - name: Download Dev Env File
-        if: github.ref == 'refs/heads/develop'
+        if: github.base_ref == 'develop'
         run: aws s3 cp s3://github-action-pipeline/env-file/hh-non-landing-page/recruiter/develop/.env.development .env
 
       - name: Download Prod Env File
-        if: github.event_name == 'create' && github.event.ref_type == 'tag'
+        if: github.base_ref == 'main'
         run: aws s3 cp s3://github-action-pipeline/env-file/hh-non-landing-page/recruiter/production/.env.production .env
 
 
@@ -44,7 +40,7 @@ jobs:
         run: npm run build:live
 
       - name: Delete Previous Next.js on Develop
-        if: github.ref == 'refs/heads/develop'
+        if: github.base_ref == 'develop'
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST_DEV }}
@@ -56,7 +52,7 @@ jobs:
             sudo chmod 777 /home/ubuntu/admin/recruiter/tmp
 
       - name: Delete Previous Next.js on Production
-        if: github.event_name == 'create' && github.event.ref_type == 'tag'
+        if: github.base_ref == 'main'
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST_PROD }} 
@@ -68,7 +64,7 @@ jobs:
             sudo chmod 777 /home/ubuntu/admin/recruiter/tmp
 
       - name: Copy SSH Develop Key to File
-        if: github.ref == 'refs/heads/develop'
+        if: github.base_ref == 'develop'
         run: |
           echo "$EC2_PRIVATE_KEY_DEV" > EC2_KEY.pem
           chmod 600 EC2_KEY.pem
@@ -76,7 +72,7 @@ jobs:
           EC2_PRIVATE_KEY_DEV: ${{ secrets.EC2_PRIVATE_KEY_DEV }}
 
       - name: Copy SSH Production Key to File
-        if: github.event_name == 'create' && github.event.ref_type == 'tag'
+        if: github.base_ref == 'main'
         run: |
           echo "$EC2_PRIVATE_KEY_PROD" > EC2_KEY.pem
           chmod 600 EC2_KEY.pem
@@ -84,32 +80,32 @@ jobs:
           EC2_PRIVATE_KEY_PROD: ${{ secrets.EC2_PRIVATE_KEY_PROD }} 
 
       - name: Update known_hosts Development
-        if: github.ref == 'refs/heads/develop'
+        if: github.base_ref == 'develop'
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan -H ${{ secrets.EC2_HOST_DEV }} >> ~/.ssh/known_hosts
 
       - name: Update known_hosts Production
-        if: github.event_name == 'create' && github.event.ref_type == 'tag'
+        if: github.base_ref == 'main'
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan -H ${{ secrets.EC2_HOST_PROD }} >> ~/.ssh/known_hosts
 
       - name: Copy build files to Develop EC2 instance
-        if: github.ref == 'refs/heads/develop'
+        if: github.base_ref == 'develop'
         run: |
           scp -i EC2_KEY.pem -r dist ${{ secrets.EC2_USERNAME_DEV }}@${{ secrets.EC2_HOST_DEV }}:/home/ubuntu/admin/recruiter/tmp/dist
           scp -i EC2_KEY.pem package.json ${{ secrets.EC2_USERNAME_DEV }}@${{ secrets.EC2_HOST_DEV }}:/home/ubuntu/admin/recruiter/tmp/package.json
 
       - name: Copy build files to Production EC2 instance
-        if: github.event_name == 'create' && github.event.ref_type == 'tag'
+        if: github.base_ref == 'main'
         run: |
           scp -i EC2_KEY.pem -r dist ${{ secrets.EC2_USERNAME_PROD }}@${{ secrets.EC2_HOST_PROD }}:/home/ubuntu/admin/recruiter/tmp/dist
           scp -i EC2_KEY.pem package.json ${{ secrets.EC2_USERNAME_PROD }}@${{ secrets.EC2_HOST_PROD }}:/home/ubuntu/admin/recruiter/tmp/package.json
 
   DeployOnDev:
     needs: Build
-    if: github.ref == 'refs/heads/develop'
+    if: github.base_ref == 'develop'
     runs-on: ubuntu-latest
 
     steps:
@@ -128,7 +124,7 @@ jobs:
 
   DeployOnTagCreation:
     needs: Build
-    if: github.event_name == 'create' && github.event.ref_type == 'tag'
+    if: github.base_ref == 'main'
     runs-on: ubuntu-latest
 
     steps:
